<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_list"
        android:layout_width="130dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:src="@android:color/darker_gray"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/username_list"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|left"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_list" />

    <TextView
        android:id="@+id/name_list"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|left"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_list" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/following"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/repository"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toEndOf="@+id/avatar_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_repository"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="249dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:drawableStartCompat="@drawable/ic_baseline_domain_24"
        android:gravity="center|left"
        android:text="@string/company"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_list" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="268dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        android:gravity="center|left"
        android:text="@string/location"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

    <TextView
        android:id="@+id/text_repository"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/repository"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/avatar_list"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository" />

    <TextView
        android:id="@+id/text_followers"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toEndOf="@+id/text_repository"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers" />

    <TextView
        android:id="@+id/text_following"
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/following"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/text_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:minHeight="?actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="315dp" />

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:layout_marginTop="12dp"
        android:background="#ededed"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toTopOf="@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/name_list"
        app:layout_constraintTop_toBottomOf="@+id/text_following"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>